# Pico2w-BLE-example

./: CMakeLists.txt  README.md  ble_server.c  ble_server.h  btstack_config.h  foo.gatt  server.c
